[package]
name = "payments-core"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Doherty <andrew.olv@gmail.com>"]
description = "This crate is used as framework for building other components of the payments system."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.57"
dirs = "4.0.0"
csv = "1.1.6"

clap = "3.1.12"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

tokio = { version = "1.17.0", features = ["full"] }
